# discord-ai-bot

./: .gitignore  pyproject.toml  replit.nix  requirements.txt
src/discord_ai_bot/step0/: __init__.py  bot.py
src/discord_ai_bot/step1/: bot.py  my_openai.py
src/discord_ai_bot/step2/: mdb.py
src/discord_ai_bot/step3/: bot.py  mdb.py  my_openai.py
